# LifeOS

./: .env.example  .gitignore  CODEX.md  docker-compose.yml
services/lifeos-api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/lifeos-api/alembic/: env.py
services/lifeos-api/alembic/versions/: 0001_initial_lifeos.py  0002_lifeos_v11_core.py  0003_sport_program_engine.py  0004_profile_settings.py  0005_food_calorie_protein_engine.py
services/lifeos-api/src/lifeos_api/: __init__.py  app.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
services/lifeos-api/src/lifeos_api/api/routes/: __init__.py  checkins.py  context.py  daily.py  finance.py  food.py  habits.py  health.py  profile.py  reviews.py  sport.py  (+3 more)
services/lifeos-api/src/lifeos_api/core/: security.py  time.py
services/lifeos-api/src/lifeos_api/data/: __init__.py  areas.json  habits.json  personalization.json  reset_plan.json  sport_program.json
services/lifeos-api/src/lifeos_api/domain/: __init__.py  context.py  daily.py  finance.py  food.py  health.py  profile.py  sport.py  telegram_actions.py  workouts.py
services/lifeos-api/src/lifeos_api/serializers/: __init__.py  daily.py  finance.py  food.py  health.py  profile.py  sport.py  tasks.py  workouts.py
services/lifeos-api/tests/: conftest.py  test_api.py  test_architecture.py  test_auth_health.py  test_context_profile.py  test_daily_command_center.py  test_daily_reviews.py  test_finance.py  test_food.py  test_health.py  test_openclue_contract.py  test_sport.py  test_telegram_actions.py
(+24 files in other folders)
