[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeos-api"
version = "0.1.0"
description = "FastAPI and Postgres API service for OpenClue LifeOS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "psycopg[binary]>=3.1.19",
    "pandas>=2.2.2",
    "openpyxl>=3.1.4",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lifeos_api = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
